opam-version: "2.0"
name: "httpkit-lwt-unix-httpaf"
version: "0.13"
synopsis: "High-level, High-performance HTTP(S) Clients/Servers with Lwt"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/httpkit"
bug-reports: "https//github.com/ostera/httpkit/issues"
depends: [
  "httpkit"
  "httpaf-lwt"
  "lwt"
  "ssl"

  "dune" {build}
  "reason" {build}
]
build: ["dune" "build" "-p" name]
install: ["dune" "install" name "--prefix" prefix "--root" "."]
