opam-version: "2.0"
name: "httpkit"
version: "0.4"
synopsis: "High-level, High-performance HTTP(S) Clients/Servers"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/httpkit"
bug-reports: "https//github.com/ostera/httpkit/issues"
depends: [
  "fmt"
  "httpaf"
  "httpaf-lwt"
  "logs"
  "lwt"
  "tls"
  "uri"

  "dune" {build}
  "reason" {build}
]
build: [make "build"]
install: [make "install"]
