opam-version: "2.0"
name: "httpkit"
version: "0.11"
synopsis: "High-level, High-performance HTTP(S) Clients/Servers"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/httpkit"
bug-reports: "https//github.com/ostera/httpkit/issues"
depends: [
  "fmt"
  "httpaf"
  "logs"
  "tls"
  "uri"
  "fpath"

  "dune" {build}
  "reason" {build}
]
build: ["dune" "build" "-p" name]
install: ["dune" "install" name "--prefix" prefix "--root" "."]
