(executable
  (package httpkit)
  (name request)
  (public_name request)
  (modules request)
	(ocamlopt_flags -O3)
  (libraries httpkit-lwt-unix-httpaf httpkit-lwt-unix-h2 httpkit logs.fmt fmt.tty fpath))

(executable
  (package httpkit)
  (name echo_server)
  (public_name echo_server)
  (modules echo_server)
	(ocamlopt_flags -O3)
  (libraries httpkit-lwt-unix-httpaf httpkit-lwt-unix-h2 httpkit logs.fmt fmt.tty fpath))
