(executable
  (package httpkit)
  (name request_http)
  (public_name request_http)
  (modules request_http)
	(ocamlopt_flags -O3)
  (libraries httpkit-lwt-unix-httpaf httpkit logs.fmt fmt.tty fpath))

(executable
  (package httpkit)
  (name request_http2)
  (public_name request_http2)
  (modules request_http2)
	(ocamlopt_flags -O3)
  (libraries httpkit-lwt-unix-h2 httpkit logs.fmt fmt.tty fpath))
