(executable
  (name HelloWorld)
  (modules HelloWorld)
  (public_name helloworld)
	(ocamlopt_flags -O3)
  (libraries httpkit logs.fmt fmt.tty lwt))

(executable
  (name Request)
  (public_name request)
  (modules Request)
	(ocamlopt_flags -O3)
  (libraries httpkit logs.fmt fmt.tty))

(executable
  (name EchoServer)
  (modules EchoServer)
  (public_name echottp)
	(ocamlopt_flags -O3)
  (libraries httpkit logs.fmt fmt.tty lwt))

(executable
  (name RawEchoServer)
  (modules RawEchoServer)
  (public_name rawechottp)
	(ocamlopt_flags -O3)
  (libraries httpkit httpaf logs.fmt fmt.tty lwt))
